Refactor drug handling in DVDMS  (#83)
* Refactor drug handling in DVDMS product and record item order viewsets; introduce DVDMSDrugLookupMixin for drug fetching logic

* Refactor drug details in API specification; replace hstnum_itembrand_id with eaushadhi_drug_id and update related examples
